# zenocode

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  agents-editor.md
app/zenocode-cli/: Cargo.toml
app/zenocode-cli/src/: main.rs
app/zenocode-tui/: Cargo.toml
app/zenocode-tui/src/: main.rs
backlog/: config.yml
backlog/tasks/: task-1 - Milestone-1-Basic-TUI-Implementation.md  task-1.1 - Create-message-input-output-components.md  task-1.2 - Implement-conversation-history-management.md  task-1.3 - Add-basic-message-formatting.md  task-10 - Milestone-4-Performance-Enhancements.md  task-10.1 - Implement-response-streaming.md  task-10.2 - Add-caching-mechanisms.md  task-10.3 - Optimize-memory-usage.md  task-11 - Milestone-4-Project-Context-Awareness.md  task-11.1 - Add-workspace-file-context-loading.md  task-11.2 - Implement-codebase-indexing.md  task-11.3 - Create-cross-file-reference-support.md  task-12 - Milestone-4-Collaboration-Features.md  task-12.1 - Add-multi-user-sessions.md  task-12.2 - Implement-shared-context-pools.md  task-12.3 - Create-collaboration-history.md  task-13 - Investigate-Future-Considerations.md  task-13.1 - Research-custom-plugin-marketplace.md  task-13.2 - Research-voice-input-output-support.md  task-13.3 - Research-CI-CD-integration.md  task-13.4 - Research-self-hosted-deployment.md  task-13.5 - Research-fine-tuning-interface.md  task-2 - Milestone-1-OpenAI-Provider-Integration.md  task-2.1 - Implement-API-client-for-OpenAI.md  task-2.2 - Connect-provider-to-TUI-interface.md  task-2.3 - Add-configuration-for-API-keys.md  task-3 - Milestone-1-Core-Functionality.md  task-3.1 - Implement-message-queuing-system.md  task-3.2 - Add-error-handling-for-API-failures.md  task-3.3 - Create-session-persistence.md  task-4 - Milestone-2-Response-Formatting.md  task-4.1 - Add-syntax-highlighting-for-code-blocks.md  task-4.2 - Implement-markdown-rendering.md  task-4.3 - Support-table-structured-data-display.md  task-5 - Milestone-2-Input-Modes.md  task-5.1 - Implement-'ask'-mode-(Q&A).md  task-5.2 - Create-'code'-mode-(context-aware-editing).md  task-5.3 - Add-file-attachment-support.md  task-6 - Milestone-2-Multi-provider-Support.md  task-6.1 - Add-Anthropic-provider.md  (+14 more)
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/completion/: Cargo.toml
crates/completion/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  provider.rs
crates/interface/cli/: Cargo.toml
crates/interface/tui/: Cargo.toml
crates/providers-core/: Cargo.toml
crates/providers-core/src/: lib.rs
crates/providers/openai/: Cargo.toml
crates/providers/openai/src/: lib.rs
crates/tui/: Cargo.toml
(+5 files in other folders)
