[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/tui",
    "crates/providers/openai",
    "bin/zenocode-cli",
    "bin/zenocode-tui"
]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
