[workspace]
members = [
    "crates/core",
    "crates/completion",
    "crates/providers/openai",
    "crates/interface/cli",
    "crates/interface/tui",
    "bin"
]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
