[package]
name = "zenocode-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
zenocode-core = { path = "../../crates/core" }
zenocode-provider-openai = { path = "../../crates/providers/openai" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
