[package]
name = "zenocode-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
zenocode-core = { path = "../../crates/core" }
zenocode-provider-openai = { path = "../../crates/providers/openai" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
crossterm = "0.27"
tui = "0.19"
anyhow = "1.0"
futures = "0.3"
