[package]
name = "zenocode-provider-openai"
version = "0.1.0"
edition = "2024"

[dependencies]
zenocode-core = { path = "../../core" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
tokio-stream = "0.1.17"
anyhow.workspace = true
async-trait.workspace = true
